# devobs

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  Cargo.toml  Justfile  Makefile  README.md  flake.nix  pyproject.toml  rust-toolchain.toml
.config/: nextest.toml
.devcontainer/: devcontainer.json  onCreateCommand.sh
.devcontainer.example/: devcontainer.json  onCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml  prepare-release.yaml  release.yaml
.vscode.example/: extensions.json  launch.json  settings.json
src/: check_file_pair.rs  commands.rs  main.rs  preferred_suffix.rs  utils.rs
src/commands/: assert_diff.rs  check_file_pair.rs  preferred_suffix.rs
src/utils/: fs.rs  hash.rs
tests/: helpers.rs  integration_test.rs  test_check_file_pair.rs  test_helpers.rs
tests/commands/: check_file_pair.rs  mod.rs  test_assert_diff.rs  test_check_file_pair.rs  test_preferred_suffix.rs
tests/commands/snapshots/: integration_test__commands__check_file_pair__backward_matching.snap  integration_test__commands__check_file_pair__create_if_not_exists_dry_run.snap  integration_test__commands__check_file_pair__empty_directory_no_error_no_output.snap  integration_test__commands__check_file_pair__forward_matching.snap  integration_test__commands__check_file_pair__on_fully_populated_directory.snap  (+2 more)
tests/snapshots/: test_check_file_pair__backward_matching.snap  test_check_file_pair__create_if_not_exists_dry_run.snap  test_check_file_pair__forward_matching.snap
