[package]
name = "devobs"
version = "0.2.7"
edition = "2024"
description = "CLI for obsessed developers."
readme = "README.md"
authors = ["Yuchan Lee <lasuillard@gmail.com>"]
homepage = "https://github.com/lasuillard-s/devobs"
license = "MIT"

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
glob = "=0.3.3"
log = "=0.4.33"
regex = "=1.12.4"
simplelog = "=0.12.2"
strfmt = "=0.2.5"
tokio = { version = "=1.52.3", features = ["full"] }
anyhow = "=1.0.102"
sugars = "=3.0.1"
serde = { version = "=1.0.228", features = ["derive"] }

[dev-dependencies]
assert_cmd = "=2.2.2"
insta = "=1.48.0"
mockall = "=0.14.0"
reqwest = "=0.13.4"
rstest = "=0.26.1"
tempfile = "=3.27.0"
